# ngraph.native

./: .gitignore
benchmark/: CMakeLists.txt
demo/ngraph.native.demo/ngraph.native.demo/: main.cpp
src/: layout.cpp  layout.h
test_version/data1/: meta.json
